fix(workflow): CHROMEDRIVER_PATH 환경 변수 초기화 제거
CHROMEDRIVER_PATH의 기본 경로 설정을 제거하여 유연성을 높임.

--- a/.github/workflows/marathon-crawling.yml
+++ b/.github/workflows/marathon-crawling.yml
@@ -49,7 +49,7 @@ jobs:
           printf '%s\n' "MYSQL_TABLE=${MYSQL_TABLE}"
           printf '%s\n' "OPTION_ARGUMENTS=${OPTION_ARGUMENTS}"
           printf '%s\n' "OUTPUT_CSV_FILE_NAME=${OUTPUT_CSV_FILE_NAME}"
-          printf '%s\n' "CHROMEDRIVER_PATH=/usr/lib/chromium-browser/chromedriver"
+          printf '%s\n' "CHROMEDRIVER_PATH="
         } > .env
 
     - name: Run marathon crawling script
