--- a/.github/workflows/marathon-crawling.yml
+++ b/.github/workflows/marathon-crawling.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Create .env file from secrets
       env:
         MYSQL_HOSTNAME: ${{ secrets.MYSQL_HOSTNAME }}
+        MYSQL_PORT: ${{ secrets.MYSQL_PORT }}
         MYSQL_USER: ${{ secrets.MYSQL_USER }}
         MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
         MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
@@ -43,6 +44,7 @@ jobs:
       run: |
         {
           printf '%s\n' "MYSQL_HOSTNAME=${MYSQL_HOSTNAME}"
+          printf '%s\n' "MYSQL_PORT=${MYSQL_PORT}"
           printf '%s\n' "MYSQL_USER=${MYSQL_USER}"
           printf '%s\n' "MYSQL_PASSWORD=${MYSQL_PASSWORD}"
           printf '%s\n' "MYSQL_DATABASE=${MYSQL_DATABASE}"
